<resources>
    <string name="app_name">Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">0</string>
    <string name="AC">AC</string>
    <string name="signChange">+/-</string>
    <string name="percent">%</string>
    <string name="div">/</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="multiplication">*</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="minus">-</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="plus">+</string>
    <string name="num0">0</string>
    <string name="comma">.</string>
    <string name="calculate">=</string>
    <string name="bracketR">(</string>
    <string name="bracketL">)</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tg">tg</string>
    <string name="radical">√</string>
    <string name="ln">ln</string>
    <string name="lg">ln</string>
</resources>