<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CalculatorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="bottom|end"
                android:hint="@string/empty"
                android:textSize="50sp" />
        </LinearLayout>
    </ScrollView>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/acButton"
                style="@style/button"
                android:text="@string/AC"
                android:theme="@style/lightButton" />

            <Button
                android:id="@+id/signChangeButton"
                style="@style/button"
                android:text="@string/signChange"
                android:theme="@style/lightButton" />

            <Button
                android:id="@+id/percentButton"
                style="@style/button"
                android:text="@string/percent"
                android:theme="@style/lightButton" />

            <Button
                android:id="@+id/divButton"
                style="@style/button"

                android:text="@string/div"

                android:theme="@style/orangeButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/num7Button"
                style="@style/button"
                android:layout_width="wrap_content"
                android:text="@string/num7" />

            <Button
                android:id="@+id/num8Button"
                style="@style/button"

                android:text="@string/num8" />

            <Button
                android:id="@+id/num9Button"
                style="@style/button"

                android:text="@string/num9" />

            <Button
                android:id="@+id/multiplicationButton"
                style="@style/button"

                android:text="@string/multiplication"

                android:theme="@style/orangeButton" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/num4Button"
                style="@style/button"

                android:text="@string/num4" />

            <Button
                android:id="@+id/num5Button"
                style="@style/button"

                android:text="@string/num5" />

            <Button
                android:id="@+id/num6Button"
                style="@style/button"

                android:text="@string/num6" />

            <Button
                android:id="@+id/minusButton"
                style="@style/button"

                android:text="@string/minus"
                android:theme="@style/orangeButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/num1Button"
                style="@style/button"

                android:text="@string/num1" />

            <Button
                android:id="@+id/num2Button"
                style="@style/button"

                android:text="@string/num2" />

            <Button
                android:id="@+id/num3Button"
                style="@style/button"

                android:text="@string/num3" />

            <Button
                android:id="@+id/plusButton"
                style="@style/button"

                android:text="@string/plus"
                android:theme="@style/orangeButton" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/num0Button"
                style="@style/button"

                android:layout_span="2"
                android:text="@string/num0" />

            <Button
                android:id="@+id/dotButton"
                style="@style/button"

                android:text="@string/comma" />

            <Button
                android:id="@+id/calculateButton"
                style="@style/button"

                android:text="@string/calculate"
                android:theme="@style/orangeButton" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>